# mcp-video2text

./: README.md  pyproject.toml  test_mpc_cli.py  video2text.py
src/: __init__.py
