[project]
name = "mcp-video2text"
version = "0.1.0"
description = "Convert online video to text, read it quickly"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.9.0",
  "yt-dlp>=2025.4.30",
]

[project.optional-dependencies]
mlx = [
  "mlx-whisper>=0.4.2"
]
cpp = [
  "pywhispercpp>=1.3.0"
]

[dependency-groups]
mlx = [
  "mlx-whisper>=0.4.2"
]
cpp = [
  "pywhispercpp>=1.3.0"
]

[project.scripts]
video2text = "src:test"

[tool.uv]
package = true
resolution = "lowest-direct"
default-groups = ["mlx", "cpp"]

[tool.setuptools.packages.find]
where = ["./"]
